[metadata]
name = 'GangliPy'
version = '0.0.1'
description = ''
author = 'SimLeek'
author_email = 'josh.miklos@gmail.com'
license = 'MIT'
url = 'https://github.com/SimLeek/GangliPy'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
